--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-numpy
-scipy
-pandas
-chardet
-numba
-matplotlib
-pytest
+numpy==1.26.2
+scipy==1.12.0
+pandas==2.2.0
+chardet==5.2.0
+numba==0.59.0
+matplotlib==3.8.0
+pytest==3.8.0
